temp. fix for LaTeX rendering on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -100,3 +100,12 @@ h1.based{
     text-align: center;
     margin: auto;
 }
+.katex-display {
+    overflow-x: auto;
+}
+
+@media (max-width: 700px) {
+    .eqn-num {
+        visibility: collapse;
+    }
+}
